# Day

./: .gitignore  CMakeLists.txt  README.md  compiler.c  day.c  new.day  sample.t
code/: basic_types.h  chunking.c  chunking.h  common_data_types.h  day.c  exit_due_to_error.c  exit_due_to_error.h  exit_with_error.c  exit_with_error.h  memory.c  memory.h  straining.c  straining.h  text.c  text.h  tokenizing.c  tokenizing.h  utf8.c  utf8.h
t_code_samples/: sample-invalid.t  sample-valid.t
t_samples/: line_too_long.t
